<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/btnVlo"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/vlo_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSis"
        app:layout_constraintEnd_toStartOf="@+id/btnSchedule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnSchedule"
        android:layout_width="170dp"
        android:layout_height="64.5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/schedule_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btnHva"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnVlo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnSis"
        android:layout_width="170dp"
        android:layout_height="64.5dp"
        android:layout_marginStart="4dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/sis_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/btnHva"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVlo" />

    <Button
        android:id="@+id/btnHva"
        android:layout_width="170dp"
        android:layout_height="64.5dp"
        android:layout_marginEnd="4dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/hva_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnSis"
        app:layout_constraintTop_toBottomOf="@+id/btnSchedule" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPortals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSis" />
</androidx.constraintlayout.widget.ConstraintLayout>